|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2004, PHP 5.1.0
- Moved extensions to PECL:
  . ext/cpdf        (Tony, Derick)
  . ext/dio         (Jani, Derick)
  . ext/fam         (Jani, Derick)
  . ext/mnogosearch (Jani, Derick)
  . ext/w32api      (Jani, Derick)
  . ext/yp          (Jani, Derick)
- Changed stream_filter_(ap|pre)pend() to return resource. (Sara)
- Changed mysqli_exception and sqlite_exception to use RuntimeException as base 
  if SPL extension is present. (Georg, Marcus)
- Removed garbage manager in Zend Engine which results in more aggressive
  freeing of data. (Dmitry, Andi)
- Improved support for embedded server in mysqli. (Georg)
- Improved performance of:
  . general execution/compilation. (Andi, Thies, Sterling, Dmitry, Marcus)
  . switch() statement. (Dmitry)
  . several array functions. (Marcus)
  . virtual path handling by adding a realpath() cache. (Andi)
  . variable fetches. (Andi)
  . magic method invocations. (Marcus)
- Improved extension SPL (Marcus).
  . added standard hierarchy of Exception classes
  . added interface Countable
  . added interfaces Subject and Observer
  . added spl_autoload*() functions
  . converted several 5.0 examples into c code
  . added class File
- Added interface Serializeable. (Stanislav, Marcus)
- Added pg_field_type_oid() PostgreSQL function. (mauroi at digbang dot com)
- Added zend_declare_property_...() and zend_update_property_...()
  API functions for bool, double and binary safe strings. (Hartmut)
- Added new classes in mysqli: mysqli_driver, mysqli_warning, mysqli_exception,
  and mysqli_sql_exception. (Georg)
- Added possibility to access INI variables from within .ini file. (Andrei)
- Added constructors for mysqli_stmt and mysqli_result classes. (Georg)
- Added variable $_SERVER['REQUEST_TIME'] containing request start time. (Ilia)
- Added optional float parameter to gettimeofday(). (Ilia)
- Added apache_reset_timeout() Apache1 function. (Rasmus)